# cosc426-midterm-b5

./: .gitignore  NLPproject.ipynb  README.md  config_gpt2.yaml  config_roberta.yaml  helpers.py  pyproject.toml  util.py
configs/: gpt2.yaml  gpt2_base.yaml  gpt2_large.yaml  roberta.yaml  roberta_base.yaml  roberta_large.yaml
data/: original.tsv
notebooks/: NLPproject.ipynb  helpers.py
report/: custom.bib  main.tex
results/: gpt2.tsv  gpt2_base.tsv  roberta_base.tsv
