[project]
name = "cosc426-midterm-b5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
